--- a/src/shared/components/canvas/canvas.module.css
+++ b/src/shared/components/canvas/canvas.module.css
@@ -1,7 +1,7 @@
 .canvas {
 	display: block;
 	image-rendering: pixelated;
-	width: 100%;
+	max-width: 100%;
 	height: 100%;
 	object-fit: contain;
 }
