--- a/src/shared/components/canvas/canvas.module.css
+++ b/src/shared/components/canvas/canvas.module.css
@@ -1,7 +1,9 @@
 .canvas {
 	display: block;
+	background: #121212;
 	image-rendering: pixelated;
-	max-width: 100%;
+	aspect-ratio: 2;
+	width: 100%;
 	height: 100%;
 	object-fit: contain;
 }
