--- a/src/shared/components/canvas/canvas.module.css
+++ b/src/shared/components/canvas/canvas.module.css
@@ -1,6 +1,6 @@
 .canvas {
 	display: block;
-	background: #121212;
+	background: #1e1e1e;
 	image-rendering: pixelated;
 	aspect-ratio: 2;
 	width: 100%;
