--- a/src/core/app.module.css
+++ b/src/core/app.module.css
@@ -1,6 +1,6 @@
 .app {
 	display: grid;
-	grid-template-rows: 2fr 1fr 1fr;
+	grid-template-rows: auto auto auto;
 	grid-template-columns: auto 1fr auto;
 	grid-template-areas:
 		"scene render settings"
