--- a/src/core/app.module.css
+++ b/src/core/app.module.css
@@ -1,11 +1,10 @@
 .app {
 	display: grid;
-	grid-template-rows: auto auto auto;
+	grid-template-rows: auto auto;
 	grid-template-columns: auto 1fr auto;
 	grid-template-areas:
 		"scene render settings"
-		"materials render settings"
-		"meta render settings";
+		"materials render settings";
 	gap: 1px;
 	height: 100%;
 }
@@ -14,18 +13,14 @@
 	grid-area: scene;
 }
 
+.materials {
+	grid-area: materials;
+}
+
 .render {
 	grid-area: render;
 }
 
 .settings {
 	grid-area: settings;
-}
-
-.materials {
-	grid-area: materials;
-}
-
-.meta {
-	grid-area: meta;
 }
